# ccb

./: .gitignore  README.org  pyproject.toml
.github/workflows/: main.yml  match-tz.yml  match.yml  mls.yml  push.yml
assets/: skit-mls-dm.j2  skit-mls.j2  vai-dm.j2  vai.j2
ccb/: cli.py  core.py  template.py  types.py
scripts/: fortnightly.sh
tests/: test_ccb.py  test_coffee_catchup_bot.py  test_core.py
