[tool.poetry]
name = "coffee-catchup-bot"
version = "0.1.0"
description = ""
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
slackclient = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
